# meshmonk

./: CMakeLists.txt  README.md  manifest  test_bindings.py
build_root/: CMakeCache.txt  Makefile  cmake_install.cmake
build_root/openmesh_project-prefix/src/openmesh_project-build/: CMakeCache.txt  CPackSourceConfig.cmake
build_root/openmesh_project-prefix/src/openmesh_project-stamp/: openmesh_project-build-.cmake  openmesh_project-configure-.cmake  openmesh_project-install-.cmake  openmesh_project-source_dirinfo.txt
build_root/openmesh_project-prefix/tmp/: openmesh_project-cfgcmd.txt  openmesh_project-mkdirs.cmake
cli/: CMakeLists.txt  cli.cpp  test_compute_rigid_transform.sh
cli/test_data/: output_transform.txt  sample_corresponding_points.txt
cli/test_data/rigid_transform/: corresponding_features.txt  expected_transform.txt  output_transform_generated.txt
python/: CMakeLists.txt  meshmonk_bindings.cpp  test_bindings.py
